--- a/style_mobile.css
+++ b/style_mobile.css
@@ -88,7 +88,8 @@ body {
     background-color: #F8F9FA;
     border-radius: 30px;
     border: 0;
-    box-shadow: 2px 2px 10px 1px gray; /*나중에 수정예정 인풋 그림자*/
+    /* box-shadow: 2px 2px 10px 1px gray; 나중에 수정예정 인풋 그림자 */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
   .input-wrap .name::after{
       content:"ㅣ";
@@ -176,7 +177,7 @@ body {
   width: 100%;
   object-fit: cover;
   align-self: center;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 1px 1px 5px 1px gray;
 }
 
