--- a/style_mobile.css
+++ b/style_mobile.css
@@ -266,7 +266,7 @@ table thead th:nth-of-type(6){
 
 table tbody{
   background-color: #F8F9FA;
-  
+  font-size: 0.85rem;
 }
 
 table tbody tr{
@@ -318,7 +318,7 @@ table tfoot th{
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
-table tfoot th span:nth-of-type(2){
+table tfoot th span:nth-of-type(3){
   color: red;
 }
 table tfoot th{
